--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,32 @@ html{
 .section-contacts-info {
   margin-top: 45px;
 }
+
+/* Footer */
+.footer {
+  height: 125px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.footer-left {
+  display: flex;
+  align-items: center;
+}
+
+.footer-copyrights {
+  margin-left: 25px;
+}
+
+.footer-nav-list {
+  display: flex;
+}
+
+.footer-nav-item:not(:last-child) {
+  margin-right: 35px;
+}
