--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
+/* open-sans-300 - latin_cyrillic */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local('OpenSans-Light')
+       url('../fonts/open-sans-v29-latin_cyrillic-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/open-sans-v29-latin_cyrillic-300.woff') format('woff'), /* Modern Browsers */
+}
+/* open-sans-regular - latin_cyrillic */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular')
+       url('../fonts/open-sans-v29-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/open-sans-v29-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+}
+/* open-sans-600 - latin_cyrillic */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold')
+       url('../fonts/open-sans-v29-latin_cyrillic-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/open-sans-v29-latin_cyrillic-600.woff') format('woff'), /* Modern Browsers */
+}
+
 *{
   box-sizing: border-box;
 }
@@ -17,12 +45,13 @@ img {
 }
 
 html{
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* Header */
 .header {
   height: 110px;
+  border-bottom: 1px solid #e4e4e4;
 }
 
 .container {
@@ -48,15 +77,29 @@ html{
 .header-container {
   display: flex;
   align-items: center;
+  
   height: 100%;
 }
 
 .logo {
-  margin-right: auto;
+  margin-right: 147px;
 }
 
 .nav-list {
   display: flex;
+}
+
+.nav-item {
+  font-size: 15px;
+  line-height: 1;
+}
+
+.nav-link {
+  color: #1c1c1c;
+}
+
+.nav-item.is-active {
+  color: #3172b9;
 }
 
 .nav-item:not(:last-child) {
@@ -68,6 +111,12 @@ html{
 }
 
 /* Hero */
+.section-hero {
+  height: 550px;
+  background: url('../img/hero-img.jpg') right center no-repeat white;
+  background-size: contain;
+}
+
 .section-hero-btn-description {
   margin-top: 10px;
 }
@@ -81,6 +130,9 @@ html{
 }
 
 .section-hero-heading {
+  font-size: 40px;
+  line-height: 52px;
+  font-weight: 300;
   margin-bottom: 30px;
 }
 
@@ -223,4 +275,10 @@ html{
 
 .footer-nav-item:not(:last-child) {
   margin-right: 35px;
+}
+
+/*  18.05 lesson 6  */
+
+.section-heading {
+  font-size: 36px;
 }
